[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mrpod/"]

[project]
name = "mrpod"
version = "0.0.1"
authors = [{ name = "Zhiyao Yin", email = "zhiyao.yin@dlr.de" }]
description = "Multi-resolution proper orthogonal decomposition."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    'Intended Audience :: Science/Research',
    'Intended Audience :: Education',
    'Topic :: Scientific/Engineering',
    'License :: OSI Approved :: BSD License',
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
keywords = ["principle component analysis", "wavelet transform"]
dependencies = ["numpy"]

[project.urls]
Homepage = "https://github.com/chuckedfromspace/mrpod"
